--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
   },
   "dependencies": {
     "@nuxtjs/axios": "5.3.6",
+    "@nuxtjs/pwa": "^3.0.0-beta.6",
     "cross-env": "5.2.0",
     "node-sass": "4.11.0",
     "nuxt": "2.4.0",
-    "sass-loader": "7.1.0"
+    "sass-loader": "7.1.0",
+    "vue-lazyload": "^1.2.6"
   },
   "devDependencies": {
     "nodemon": "1.18.9"
