--- a/package.json
+++ b/package.json
@@ -14,9 +14,12 @@
     "@nuxtjs/axios": "5.3.6",
     "@nuxtjs/pwa": "^3.0.0-beta.6",
     "cross-env": "5.2.0",
+    "jssha": "^2.3.1",
+    "lazysizes": "^4.1.6",
     "node-sass": "4.11.0",
     "nuxt": "2.4.0",
     "sass-loader": "7.1.0",
+    "thumbor-url-builder": "^0.1.1",
     "vue-lazyload": "^1.2.6"
   },
   "devDependencies": {
